[package]
name = "practical-astronomy-rust"
description = "Algorithms from Practical Astronomy, implemented in Rust"
version = "0.2.2"
edition = "2021"
license = "MIT"
documentation = "https://jfcarr.github.io/practical-astronomy-rust/"
repository = "https://github.com/jfcarr/practical-astronomy-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"